--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -7,7 +7,6 @@
     background-color: rgb(169, 169, 169);
     font-family: 'Roboto', sans-serif;
     margin: 10px;
-    z-index: 1;
 }
 form{
     font-weight: 10;
@@ -18,7 +17,6 @@ form{
     height: 300px;
     width: 150px;
     color: rgba(0, 0, 0, 0.733);
-    z-index: 1;
 }
 #login{
     border-radius: 7%;
@@ -28,29 +26,30 @@ form{
     font-size: 15px;
     width: 100px;
     height: fit-content;
-    z-index: 1;
 }
 #login:hover{
     box-shadow: 1px 1px 1px rgb(202, 231, 202);
     filter: brightness(150%)
 }
-#square{
+/* #square{
     position: absolute;
     border: 1px solid red;
-    top: 1px;
-    height: 100px;
-    width: 100px;
+    top: 20px;
+    height: 1px;
+    width: 11px;
     transform: rotate(110deg);
 }
+
 #square2{
     position:absolute;
     top: 10px;
     border: 1px solid red;
-    height: 100px;
-    width: 100px;
+    height: 1px;
+    width: 11px;
     transform: rotate(120deg);
-}
-#square3{
+} */
+
+/* #square3{
     position:absolute;
     border: 1px solid red;
     top: 20px;
@@ -65,13 +64,39 @@ form{
     top: 10px;
     width: 100px;
     transform: rotate(140deg);
-}
-#square*{
-    background-color: azure;
-}
-*[id^='square']{
+} */
+/* *[id^='square']{
     background-color: rgba(91, 255, 255, 0.151);
+} */
+/* *[id^='square']{
+    animation-name: example;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
 }
-*[id^='square']:hover{
-    transform: rotate(0.5turn);
-}
+@keyframes example {
+    from {
+    background-color: white;
+    transform: rotate(10deg) scale(0.5);
+    border-radius: 0px;
+    }
+    25% {
+    background-color: wheat;
+    transform: rotate(30deg) scale(1.2);
+    border-radius: 5px;
+    }
+    50% {
+    background-color: goldenrod;
+    transform: rotate(60deg) scale(11);
+    border-radius: 10px;
+    }
+    75% {
+    background-color: darkblue;
+    transform: rotate(75deg) scale(0.5);
+    border-radius: 25px;
+    }
+    to {
+    background-color: aqua;
+    transform: rotate(90deg) scale(1);
+    border-radius: 50px;
+    }
+} */
