--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,26 +1,3 @@
-#nav-bar{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    height: fit-content;
-    width: 100%;
-    color: rgba(0, 0, 0, 0.733);
-    border: 1px solid red;
-}
-li{
-    margin: 10px;
-    padding: 10px;
-    font-size: 24px;
-    font-weight: bold;
-    border-radius: 7%;
-    border: 1px solid rgba(202, 231, 202, 0.205);
-    background-color: rgba(167, 185, 187, 0.623);
-    color: rgba(0, 0, 0, 0.89);
-    /* width: 100px; */
-    height: fit-content;
-}
-li:hover{
-    box-shadow: 1px 1px 1px rgb(202, 231, 202);
-    filter: brightness(150%);
+.hidden{
+    display: none;
 }
