--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,41 @@
 .hidden{
     display: none;
 }
+.nav-bar{
+    border: 1px solid rgb(255, 217, 112);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    width: 100%;
+    margin: 0px;
+    padding: 10px;
+}
+ul > *{
+    list-style: none;
+    text-decoration: none;
+    border: 1px solid rgb(119, 223, 255);
+    text-align: center;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+a{
+    text-decoration: none;
+    text-align: center;
+}
+i{
+    border: 1px solid greenyellow;
+    font-size: 25px;
+    text-align: center;
+}
+/* .profile-item{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+.logo-item{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+} */
