--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,20 @@
+
+/* .spot-cards-section{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: end;
+    width: 100%;
+} */
+.spot-cards-section{
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(4,1fr);
+}
+/* .nav-link > img{
+    max-width: 25%;
+} */
 .nav-link{
+    width: 100%;
     border:10px solid #CEEDC7;
 }
