--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -6,16 +6,40 @@
     background-color: rgb(169, 169, 169);
     font-family: 'Roboto', sans-serif;
     margin: 10px; */
-/* } */
-form{
-    font-weight: 10;
+    /* } */
+#modal-content{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
-    /* height: 300px;
-    width: 150px; */
+    border-radius: 23%;
+    font-weight: 10;
+    height: 230px;
+    width: 230px;
     color: rgba(0, 0, 0, 0.733);
+}
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+.user-information{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.user-information > label{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.user-information > label > input{
+    width: 90%;
 }
 #login{
     border-radius: 7%;
@@ -24,9 +48,6 @@ form{
     color: rgba(0, 0, 0, 0.89);
     font-size: 15px;
     height: fit-content;
-}
-button{
-    width: 50px;
 }
 #login:hover{
     box-shadow: 1px 1px 1px rgb(202, 231, 202);
