--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,19 +1,27 @@
-
-/* .spot-cards-section{
+#modal-content{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
-    align-items: end;
+    align-items: center;
+    border-radius: 23%;
+    font-weight: 10;
+    /* height: 230px;
+    width: 230px; */
+    color: rgba(0, 0, 0, 0.733);
+}
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
     width: 100%;
-} */
+    width: fit-content;
+}
 .spot-cards-section{
     display: grid;
     width: 100%;
     grid-template-columns: repeat(4,1fr);
 }
-/* .nav-link > img{
-    max-width: 25%;
-} */
 .nav-link{
     width: 100%;
     border:10px solid #CEEDC7;
