--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+/* ------LOGIN AND SIGNUP FORMS------ */
 #modal-content{
     display: flex;
     flex-direction: column;
@@ -5,8 +6,6 @@
     align-items: center;
     border-radius: 23%;
     font-weight: 10;
-    /* height: 230px;
-    width: 230px; */
     color: rgba(0, 0, 0, 0.733);
 }
 form{
@@ -17,12 +16,4 @@ form{
     width: 100%;
     width: fit-content;
 }
-.spot-cards-section{
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(4,1fr);
-}
-.nav-link{
-    width: 100%;
-    border:10px solid #CEEDC7;
-}
+/* ------LOGIN AND SIGNUP FORMS------ */
