--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -1,18 +1,22 @@
 /* ------------SPOT CARDS------------ */
 .spot-cards-section{
     display: flex;
-    justify-content: space-evenly;
-    width: 100%;
-    grid-template-columns: repeat(4,1fr);
-    border: 1px solid rgb(226, 0, 0);
-    padding: 5px;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 .spot-card{
-    width: 100%;
-    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 21%;
+    margin: 15px;
+    border:1px solid #CEEDC7;
+}
+.spot-card > *{
+    width: 70%;
 }
 .nav-link{
-    width: 100%;
+    /* width: 100%; */
     border:1px solid #CEEDC7;
 }
 .nav-link-info-primary{
