improved spot details css a bit

--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -28,6 +28,10 @@
     font-size: 10px;
     height: 20px;
 }
+.nav-link-info-primary > div > i{
+    font-size: 10px;
+    color: red;
+}
 .nav-link-info-secondary{
     border: 1px dotted rgb(234, 0, 255);
     display: flex;
