--- a/frontend/src/components/SpotCardImage/LargeCardImage.css
+++ b/frontend/src/components/SpotCardImage/LargeCardImage.css
@@ -1,6 +1,6 @@
 .large-spot-card-image > img{
     /* TODO: IMAGES*/
-    width: 500px;
-    height: 500px;
+    max-width: 40%;
+    max-height:40%;
     padding: 5px;
 }
