--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -5,16 +5,30 @@
  width: 100%;
  height: 100%;
 }
-.user-information{
+.user-information-create-spot{
  border: 1px solid gold;
  width: 50%;
-}
-.user-information > label{
  display: flex;
- justify-content: center;
- width: 100%;
+ flex-direction: column;
+ justify-content:space-evenly;
+ align-items: center;
 }
-.user-information > label > input{
+.user-information-create-spot > .form-row{
+ border: 1px solid yellowgreen;
+ width: 100%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+.form-row-data{
+ border: solid 1px black;
+ width: 50%;
+ display: flex;
+ flex-direction: column;
+ align-items: left;
+ justify-content: center;
+}
+.user-information-create-spot > label > input{
  width: 90%;
 }
 #login{
