--- a/frontend/src/components/PostAReviewModal/PostReview.css
+++ b/frontend/src/components/PostAReviewModal/PostReview.css
@@ -1,15 +1,19 @@
-.user-information{
+.user-information-post-review{
     display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
     align-items: center;
     width: 100%;
     height: 100%;
 }
-.user-information > label{
+.form-row-data-post-review{
+    height: 100px;
     display: flex;
-    justify-content: center;
-    width: 100%;
+}
+.form-row-data-post-review-label{
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .user-information > label > input{
     width: 90%;
