--- a/frontend/src/components/PostAReviewModal/PostReview.css
+++ b/frontend/src/components/PostAReviewModal/PostReview.css
@@ -1,3 +1,7 @@
+.review-modal{
+    border: 10px solid rgb(255, 187, 97);
+    border-radius: 11%;
+}
 .user-information-post-review{
     display: flex;
     flex-direction: column;
