--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,12 +1,3 @@
-button{
-    border-radius: 7%;
-    border: 1px solid rgba(202, 231, 202, 0.205);
-    background-color: rgba(167, 185, 187, 0.623);
-    color: rgba(0, 0, 0, 0.89);
-    font-size: 15px;
-    height: fit-content;
-}
-button:hover{
-    box-shadow: 1px 1px 1px rgb(202, 231, 202);
-    filter: brightness(150%);
+#sign-me-up{
+ width: 90%;
 }
