--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,3 @@
-/* ------LOGIN AND SIGNUP FORMS------ */
 #modal-content{
     display: flex;
     flex-direction: column;
@@ -16,4 +15,16 @@ form{
     width: 100%;
     width: fit-content;
 }
-/* ------LOGIN AND SIGNUP FORMS------ */
+button{
+    margin: 10px;
+    border-radius: 7%;
+    border: 1px solid rgb(202, 231, 202);
+    background-color: rgba(123, 123, 123, 0.623);
+    color: rgb(65, 65, 65);
+    font-size: 15px;
+    height: fit-content;
+}
+button:hover{
+    box-shadow: 1px 1px 1px rgb(202, 231, 202);
+    filter: brightness(150%);
+}
