--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,9 @@
+#root{
+    border: 1px solid royalblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 #modal-content{
     display: flex;
     flex-direction: column;
