--- a/frontend/src/components/UpdateReviewModal/UpdateReviewModal.css
+++ b/frontend/src/components/UpdateReviewModal/UpdateReviewModal.css
@@ -1,17 +1,24 @@
-.user-information{
+.review-modal{
+    border: 10px solid rgb(255, 187, 97);
+    border-radius: 11%;
+    width: 300px;
+}
+.user-information-post-review{
     display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
     align-items: center;
-    width: 300px;
-    height: 100%;
-    /* border: 10px solid rgb(255, 187, 97);
-    border-radius: 11%; */
-}
-.user-information > label{
-    display: flex;
-    justify-content: center;
     width: 100%;
+    height: 100%;
+}
+.form-row-data-post-review{
+    height: 100px;
+    display: flex;
+}
+.form-row-data-post-review-label{
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .user-information > label > input{
     width: 90%;
