--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -39,3 +39,10 @@
     font-size: 10px;
 }
 /* ------------SPOT CARDS------------ */
+/* MANAGE CARD */
+.manage-card{
+    border: 1px solid rgb(255, 65, 97);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
