--- a/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/frontend/src/components/ManageSpots/ManageSpots.css
@@ -1,3 +1,9 @@
+.manage-spots-section-header{
+ border: 1px solid purple;
+ display: flex;
+ flex-direction: column;
+ justify-content: flex-start;
+}
 .buttons{
  display: flex;
  width: 100px;
