--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -8,6 +8,18 @@
         flex-direction: column;
     }   
 }
+.spot-details-header{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: left;
+}
+.spot-details-header > *{
+    padding-left: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
 .spot-details-images{
     border: 10px solid purple;
     display: flex;
@@ -80,7 +92,6 @@
     justify-content: left;
 }
 .spot-details-reviews-content{
-    width: 10%;
     border: 1px solid rgb(68, 0, 255);
     display: flex;
     justify-content: space-between;
@@ -99,7 +110,6 @@
 .spot-details-reviews-content-reviews{
     display: flex;
     border:1px solid sienna;
-    display: flex;
     justify-content: right;
     align-content: center;
 }
