--- a/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/frontend/src/components/ManageSpots/ManageSpots.css
@@ -9,7 +9,7 @@
  width: 100px;
  justify-content: space-between;
 }
-#button{
+#manage-button{
  border-radius: 7%;
  border: 1px solid rgba(202, 231, 202, 0.205);
  background-color: rgba(167, 185, 187, 0.623);
@@ -17,7 +17,7 @@
  font-size: 5px;
  height: fit-content;
 }
-#button:hover{
+#manage-button:hover{
  box-shadow: 1px 1px 1px rgb(202, 231, 202);
  filter: brightness(150%)
 }
