--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -5,9 +5,12 @@
  width: 100%;
  height: 100%;
 }
+.form-row-data-city-state{
+ display: flex;
+}
 .user-information-create-spot{
  border: 1px solid gold;
- width: 50%;
+ width: 75%;
  display: flex;
  flex-direction: column;
  justify-content:space-evenly;
@@ -23,6 +26,16 @@
 .form-row-data{
  border: solid 1px black;
  width: 50%;
+ display: flex;
+ flex-direction: column;
+ align-items: left;
+}
+.form-row-data-label{
+ display: flex;
+ justify-content: space-between;
+}
+.form-row-data > *{
+ border: 1px solid purple;
  display: flex;
  flex-direction: column;
  align-items: left;
