--- a/frontend/src/components/ManageSpots/ManageSpots.css
+++ b/frontend/src/components/ManageSpots/ManageSpots.css
@@ -3,6 +3,18 @@
  width: 100px;
  justify-content: space-between;
 }
+.spot-cards-section-header{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+.manage-buttons > button{
+ width: 10rem
+}
+.manage-wrapper > *{
+ display: flex;
+ flex-direction: column;
+}
 #manage-button{
  border-radius: 7%;
  border: 1px solid rgba(202, 231, 202, 0.205);
