--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -74,3 +74,9 @@
     flex-direction: column;
     align-items: center;
 }
+@media screen and (max-width: 1250px){
+    .spot-cards-section{
+        display: flex;
+        flex-direction: column;
+    }   
+}
