--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     justify-content:space-evenly;
     align-items: center;
-    width: 300px;
-    height: 100%;
+    width: 30rem;
+    min-height: 25rem;
+    height: fit-content;
     /* border: 10px solid rgb(255, 187, 97);
     border-radius: 11%; */
 }
