--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -1,3 +1,9 @@
+.modal-material > *{
+  border: 2px solid rgb(230, 92, 92);
+  width: 5rem;
+  height: 5rem;
+  background-color: rgba(158, 255, 255, 0.446);
+}
 #modal {
     position: fixed;
     top: 0;
@@ -7,18 +13,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  #modal-background {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-  
-  #modal-content {
-    position: absolute;
-    background-color:white;
-  }
+}
+#modal-background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+#modal-content {
+  position: absolute;
+  background-color:white;
+}
