--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -1,5 +1,6 @@
 .spot-details{
     width: 1000px;
+    border: 10px solid brown;
 }
 .spot-details-section{
     width: 100%;
@@ -28,38 +29,23 @@
     margin-bottom: 5px;
 }
 .spot-details-images{
-    border: 10px solid purple;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
 }
 .spot-details-images-hero{
-    border: 10px solid yellow;
     display: flex;
-    align-items: center;justify-content: center;
-    width: 70%;
-}
-.spot-details-images-support{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border:10px solid rgb(255, 68, 99);
     width: 100%;
 }
-.spot-details-images-support-cards{
-    padding: 10px;
-    border: 11px solid rgb(255, 136, 0);
-    display: grid;
-    grid-template-areas:            
-        "b a"            
-        "b a"            
-        "b a";
-    width: 100%;
+#hero-img{
+    max-width: 40%;
 }
 #support-image{
-    border: 10px solid rgb(153, 255, 0);
-    width: 20rem;
+    max-width: 40%;
+}
+.spot-details-images-support *{
+    border: 10px solid yellow;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .spot-details-info{
     grid-area: c;
