--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -20,17 +20,14 @@
 }
 .spot-cards-section{
     width: 1000px;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
 }
 .spot-card{
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1 0 21%;
-    margin: 15px;
-    border:1px solid #CEEDC7;
 }
 .spot-card:hover .tooltip-text{
     color: red;
@@ -78,5 +75,5 @@
     .spot-cards-section{
         display: flex;
         flex-direction: column;
-    }   
+    } 
 }
