seed data, images, spot details and cards

--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -56,6 +56,9 @@
         "b a";
     width: 100%;
 }
+.spot-details-images-support-cards > img{
+    width: 20rem
+}
 .spot-details-info{
     grid-area: c;
     display: grid;
