--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -1,47 +1,67 @@
 .create-spot-form{
- display: flex;
- flex-direction: column;
- align-items: left;
- width: 100%;
- height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  width: 100%;
+  height: 100%;
 }
 .form-row-data-city-state{
- display: flex;
+  display: flex;
 }
 .user-information-create-spot{
- border: 1px solid gold;
- width: 75%;
- display: flex;
- flex-direction: column;
- justify-content:space-evenly;
- align-items: center;
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-evenly;
+  align-items: center;
 }
-.user-information-create-spot > .form-row{
- border: 1px solid yellowgreen;
- width: 100%;
- display: flex;
- flex-direction: column;
- align-items: center;
+.form-section{
+  width: 100%;
+  border: 1px solid red;
+}
+.one{
+  border: 2px solid rgb(85, 255, 0);
+}
+.two{
+  border: 2px solid rgb(221, 255, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content:space-evenly;
+  align-items: center;
+}
+.three{
+  border: 2px solid rgb(0, 213, 255);
+}
+.four{
+  border: 2px solid rgb(255, 0, 221);
+}
+.form-row{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.city-state{
+  border: 1px solid black;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .form-row-data{
- border: solid 1px black;
- width: 50%;
- display: flex;
- flex-direction: column;
- align-items: left;
+  width: 50%;
 }
 .form-row-data-label{
- display: flex;
- justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+}
+input{
+  border: 2px solid rgb(0, 0, 0);
 }
 .form-row-data > *{
- border: 1px solid purple;
- display: flex;
- flex-direction: column;
- align-items: left;
-}
-.user-information-create-spot > label > input{
- width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
 }
 #login{
  border-radius: 7%;
