--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,5 +37,12 @@ form{
     filter: brightness(150%);
 }
 .errors{
-    color: red;
+    color: red
 }
+/* .errors{
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    border-radius: 5em;
+    margin: 1em;
+} */
