--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -1,18 +1,3 @@
-/* ------------SPOT CARDS------------ */
-/* TODO: MOVE TOOLTIP INSIDE IMAGE */
-/* .tooltip{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.tooltip:hover .tooltip-text{
-    color: red;
-}
-
-/* .tool{
-    position: absolute;
-} */
 .tooltip-text{
     visibility: hidden;
     position: absolute;
@@ -34,18 +19,15 @@
     font-weight: bolder;
     visibility: visible;
 }
-.spot-card > *{
-    width: 70%;
-}
 .nav-link{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* width: 100%; */
-    border:1px solid #CEEDC7;
+    border-radius: 4px;
+    border: 0.1px solid rgba(0, 0, 0, 0.151);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.432);
 }
 .nav-link-info-primary{
-    border: 1px dotted rgb(234, 0, 255);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -58,7 +40,6 @@
     color: red;
 }
 .nav-link-info-secondary{
-    border: 1px dotted rgb(234, 0, 255);
     display: flex;
     justify-content: flex-start;
     font-size: 10px;
