--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -12,7 +12,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1 0 21%;
 }
 .spot-card:hover .tooltip-text{
     color: red;
@@ -53,6 +52,19 @@
     align-items: center;
 }
 @media screen and (max-width: 1250px){
+    .spot-cards-section{
+        width: 1000px;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    } 
+}
+@media screen and (max-width: 1055px){
+    .spot-cards-section{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    } 
+}
+@media screen and (max-width: 768px){
     .spot-cards-section{
         display: flex;
         flex-direction: column;
