--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -1,4 +1,10 @@
+.tooltip{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
 .tooltip-text{
+    border-radius: 0.5em;
     visibility: hidden;
     position: absolute;
     z-index: 1;
@@ -14,9 +20,12 @@
     align-items: center;
 }
 .spot-card:hover .tooltip-text{
-    color: red;
+    color: rgb(255, 123, 0);
     font-weight: bolder;
     visibility: visible;
+}
+.nav-link:hover{
+    background-color: rgba(255, 240, 240, 0.425);
 }
 .nav-link{
     display: flex;
@@ -25,6 +34,7 @@
     border-radius: 4px;
     border: 0.1px solid rgba(0, 0, 0, 0.151);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.432);
+    margin: 1rem;
 }
 .nav-link-info-primary{
     display: flex;
