--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -9,31 +9,45 @@
   display: flex;
 }
 .user-information-create-spot{
-  width: 75%;
   display: flex;
   flex-direction: column;
   justify-content:space-evenly;
   align-items: center;
 }
+label > input{
+  border:1px solid rgba(174, 0, 255, 0.164);
+  border-radius: 0.2em;
+}
+h1{
+  font-weight: 550;
+}
+h2{
+  font-weight: 450;
+}
 .form-section{
   width: 100%;
-  border: 1px solid red;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 .one{
-  border: 2px solid rgb(85, 255, 0);
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 .two{
-  border: 2px solid rgb(221, 255, 0);
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
   display: flex;
   flex-direction: column;
   justify-content:space-evenly;
   align-items: center;
 }
 .three{
-  border: 2px solid rgb(0, 213, 255);
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 .four{
-  border: 2px solid rgb(255, 0, 221);
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 .form-row{
   width: 100%;
@@ -42,7 +56,6 @@
   align-items: center;
 }
 .city-state{
-  border: 1px solid black;
   width: 50%;
   display: flex;
   align-items: center;
@@ -54,9 +67,6 @@
 .form-row-data-label{
   display: flex;
   justify-content: space-between;
-}
-input{
-  border: 2px solid rgb(0, 0, 0);
 }
 .form-row-data > *{
   display: flex;
