--- a/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
+++ b/frontend/src/components/CreateNewSpotForm/CreateNewSpot.css
@@ -7,6 +7,8 @@
 }
 .form-row-data-city-state{
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .user-information-create-spot{
   display: flex;
@@ -15,7 +17,7 @@
   align-items: center;
 }
 label > input{
-  border:1px solid rgba(174, 0, 255, 0.164);
+  border: 3px solid rgb(0, 0, 0);
   border-radius: 0.2em;
 }
 h1{
@@ -29,34 +31,15 @@ h2{
   margin-bottom: 0.5em;
   margin-top: 0.5em;
 }
-.one{
-  margin-bottom: 0.5em;
-  margin-top: 0.5em;
-}
-.two{
-  margin-bottom: 0.5em;
-  margin-top: 0.5em;
-  display: flex;
-  flex-direction: column;
-  justify-content:space-evenly;
-  align-items: center;
-}
-.three{
-  margin-bottom: 0.5em;
-  margin-top: 0.5em;
-}
-.four{
-  margin-bottom: 0.5em;
-  margin-top: 0.5em;
-}
 .form-row{
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 .city-state{
-  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
