--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -1,8 +1,10 @@
+.modal-material{
+  display: flex;
+  justify-content: center;
+ }
 .modal-material > *{
-  border: 2px solid rgb(230, 92, 92);
-  width: 5rem;
-  height: 5rem;
-  background-color: rgba(158, 255, 255, 0.446);
+  border: 2px solid rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.446);
 }
 #modal {
     position: fixed;
