signup bug was weird, but fixed

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -30,3 +30,10 @@ i{
     font-size: 25px;
     text-align: center;
 }
+@media screen and (max-width: 1250px){
+    .nav-bar{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    } 
+}
