--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -15,6 +15,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow:scroll;
+    height:100%;
 }
 #modal-background {
   position: fixed;
@@ -27,5 +29,5 @@
 
 #modal-content {
   position: absolute;
-  background-color:white;
+  background-color:rgb(255, 255, 255);
 }
