--- a/frontend/src/components/DeleteSpotModal/DeleteASpot.css
+++ b/frontend/src/components/DeleteSpotModal/DeleteASpot.css
@@ -4,7 +4,6 @@
     justify-content: space-around;
     align-items: center;
     width: 300px;
-    border: 10px solid rgb(255, 187, 97);
     border-radius: 11%;
 }
 .delete-a-spot > h3{
@@ -12,13 +11,14 @@
 }
 #delete-button{
     border: 1px solid rgb(255, 0, 0);
-    background-color: rgba(255, 208, 0, 0.623);
+    border-radius: .3em;
+    background-color: rgb(255, 134, 134);
     color: rgba(0, 0, 0, 0.89);
     font-size: 15px;
     height: fit-content;
 }
 #delete-button:hover{
-    box-shadow: 1px 1px 1px rgb(0, 255, 0);
+    box-shadow: 1px 1px 1px rgb(229, 255, 0);
     filter: brightness(150%)
 }
 .delete-buttons{
