--- a/frontend/src/components/SpotCardImage/SpotCardImage.css
+++ b/frontend/src/components/SpotCardImage/SpotCardImage.css
@@ -1,8 +1,15 @@
+.image-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 18rem;
+    height: 18rem;
+    padding: 1rem;
+}
 img{
-    border-radius: 1rem;
     display: block;
-    width: 11rem; 
-    height: 11rem; 
+    width: 100%;
+    height: 100%;
     padding: 5px;
     object-fit: cover;
 }
