--- a/frontend/src/components/SpotCards/SpotCards.css
+++ b/frontend/src/components/SpotCards/SpotCards.css
@@ -31,7 +31,10 @@
     visibility: visible;
 }
 .nav-link:hover{
-    background-color: rgba(255, 240, 240, 0.425);
+    background-color: rgba(255, 255, 255, 0.425);
+    filter:brightness(101%);
+    box-shadow: 0 1rem 2rem rgb(133, 127, 127);
+    font-weight: bold;
 }
 .nav-link{
     height: 100%;
@@ -39,10 +42,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-radius: 4px;
+    align-items: center;
+    border-radius: 1rem;
     border: 0.1px solid rgba(0, 0, 0, 0.151);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.432);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.432);
     margin: 1rem;
+}
+.nav-link-info{
+    width: 90%;
 }
 .primary{
     display: flex;
@@ -78,8 +85,8 @@
 }
 @media screen and (max-width: 1055px){
     .spot-cards-section{
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
+        display: flex;
+        flex-direction: column;
     } 
 }
 @media screen and (max-width: 768px){
