--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,6 +1,14 @@
 .fa-yin-yang{
-    color: rgb(0, 255, 132);
-    padding-right: 1rem;
+    color: var(--green);
+    padding: 1rem;
+}
+.profile-menu{
+    background-color: white;
+    border: none;
+}
+.profile-menu > *{
+    color: var(--green);
+    padding: 1rem;
 }
 .hidden{
     display: none;
@@ -12,7 +20,8 @@
     font-family: 'Roboto', sans-serif;
     width: 100%;
     margin: 0px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.247);
+    padding: 0px;
+    border-bottom: 1px solid var(--green);
     margin-bottom: 1rem;
 }
 .nav-bar-conditional-content{
@@ -36,7 +45,6 @@ a{
     align-items: center;
 }
 li{
-    padding: .5rem;
     font-size: 1.1rem;
     text-decoration: none;
     text-align: center;
