--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@
     --blue: #89b5ef;
     --grey: #777777;
     --purple: #bcb3dd;
+    --green:  rgb(83, 255, 195);
 }
 *{
     font-family: 'Roboto', sans-serif;
