--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -22,7 +22,8 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: left;
-    border-bottom: 0.01rem solid var(--red);
+    border-bottom: .2rem solid var(--red);
+    border-radius: 1rem;
 }
 .spot-details-header > *{
     padding-left: 20px;
@@ -42,8 +43,9 @@
 }
 .spot-details-images-support{
     display: grid;
+    grid-gap: 1rem;
     grid-template-columns: repeat(2,1fr);
-    width: 100%;
+    width: 90%;
 }
 .spot-details-info{
     grid-area: c;
@@ -52,6 +54,8 @@
         "a b"
         "a b";
     margin: 20px;
+    padding: 1rem;
+    margin: 2rem;
 }
 .spot-details-info-section-one{
     grid-area: a;
@@ -93,13 +97,16 @@
 }
 .reserve-spot{
     margin: 10px;
-    border: 1px solid var(--grey);
+    border: .1rem solid var(--grey);
     background-color: var(--red);
     border-radius: 1rem;
 }
 .spot-details-reviews{
     grid-area: d;
-    border: 1px solid rgb(255, 183, 0);
+    padding-top: 3rem;
+    border-radius: 1rem;
+    border-top: .2rem solid var(--red);
+    margin: 1rem;
     display: flex;
     justify-content: left;
 }
@@ -126,7 +133,12 @@
 }
 .spot-details-reviews-content-reviews{
     display: flex;
-    border:1px solid sienna;
     justify-content: right;
     align-content: center;
 }
+/* .spot-details-images-support{
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(2,1fr);
+    width: 90%;
+} */
