--- a/frontend/src/components/SpotReview/SpotReview.css
+++ b/frontend/src/components/SpotReview/SpotReview.css
@@ -1,6 +1,9 @@
 .spot-review{
     margin-top: 10px;
-    border: 10px solid palevioletred;
+    border: .1rem solid var(--grey);
+    border-radius: 1rem;
+    padding: 2rem;
+    margin: 2rem;
 }
 #spot-review-button{
     width: 10%;
